refs 始めるボタンにダッシュボードへのリンクを追加

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -45,7 +45,7 @@
         <p class="lead">このウェブアプリは、家族間での貸し借りの返済を管理するための便利なツールです。</p>
         <hr class="my-4">
         <p>貸し借りの記録を管理し、返済期限を見逃さないようにしましょう。</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">始める</a>
+        <a class="btn btn-primary btn-lg" href="/dashboard" role="button">始める</a>
     </div>
 </div>
 
