新規作成 画面を追加

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="/dashboard">ダッシュボード</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">新規追加</a>
+                <a class="nav-link" href="/new">新規追加</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">設定</a>
