画面の微調整

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>家族間貸し借り管理</title>
+  <title>お金管理</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <!-- Custom CSS -->
@@ -23,8 +23,8 @@
       <thead class="thead-dark">
         <tr>
           <th scope="col">#</th>
-          <th scope="col">名前</th>
           <th scope="col">金額</th>
+          <th scope="col">登録日</th>
           <th scope="col">返済日</th>
           <th scope="col">ステータス</th>
         </tr>
@@ -32,8 +32,8 @@
       <tbody>
         <tr>
           <th scope="row">1</th>
-          <td>太郎</td>
           <td>1000円</td>
+          <td>2024/03/25</td>
           <td>2024/03/25</td>
           <td><span class="badge badge-warning">未返済</span></td>
         </tr>
