--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/">ホーム <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">ホーム</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/dashboard">ダッシュボード</a>
