--- a/src/main/resources/templates/new_form.html
+++ b/src/main/resources/templates/new_form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>新規作成</title>
+    <title>お金管理</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Custom CSS -->
@@ -17,17 +17,17 @@
     <div th:replace="header :: header"></div>
 
 <div class="container mt-5">
-    <h2>新規作成</h2>
+    <h2>新しく追加する</h2>
     <form>
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label for="name">名前</label>
             <input type="text" class="form-control" id="name" placeholder="名前を入力してください">
-        </div>
+        </div> -->
         <div class="form-group">
             <label for="amount">金額</label>
             <input type="number" class="form-control" id="amount" placeholder="金額を入力してください">
         </div>
-        <button type="submit" class="btn btn-primary">作成</button>
+        <button type="submit" class="btn btn-primary">追加</button>
     </form>
 </div>
 
