--- a/src/main/resources/templates/new_form.html
+++ b/src/main/resources/templates/new_form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"></html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,16 +19,11 @@
 
 <div class="container mt-5">
     <h2>新しく追加する</h2>
-    <form>
-        <!-- <div class="form-group">
-            <label for="name">名前</label>
-            <input type="text" class="form-control" id="name" placeholder="名前を入力してください">
-        </div> -->
-        <div class="form-group">
-            <label for="amount">金額</label>
-            <input type="number" class="form-control" id="amount" placeholder="金額を入力してください">
-        </div>
-        <button type="submit" class="btn btn-primary">追加</button>
+    <form  th:action="@{/add}" th:object="${repaymentInformation}" method="get">
+        <label for="repaymentAmt">金額</label>
+        <input type="number" th:field="{repaymentAmt}" placeholder="金額を入力してください">
+
+        <button>追加</button>
     </form>
 </div>
 
