--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,26 +1,36 @@
 <div th:fragment="header()">
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">お金管理</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="/">ホーム</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/dashboard">ダッシュボード</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/new">新規追加</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/setting">設定</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">お金管理</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/">ホーム</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/dashboard">ダッシュボード</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/new">新規追加</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/setting">設定</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </div>
+    
+<!-- Custom CSS -->
+<style>
+/* ナビゲーションバーのリンクにマウスを合わせたときのスタイル */
+.navbar-nav .nav-item .nav-link:hover {
+    background-color: #fff !important; /* 背景色を白色に設定 */
+    color: #000 !important; /* テキスト色を黒色に設定 */
+}
+</style>  
+    
