--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -26,6 +26,14 @@
     </div>
 </div>
 
+<style>
+    /* ナビゲーションバーのリンクにマウスを合わせたときのスタイル */
+    .navbar-nav .nav-item .nav-link:hover {
+        background-color: #fff !important; /* 背景色を白色に設定 */
+        color: #000 !important; /* テキスト色を黒色に設定 */
+    }
+</style>
+
 <!-- Bootstrap JavaScript -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
