--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -41,7 +41,7 @@
             <form action="/changeStatus" method="GET">
               <input type="hidden" name="number" value="">
                 <!-- ステータスに応じてボタンの表示を変更 -->
-                <button type="button" class="btn btn-success btn-sm" th:if="${info.status}" onclick="sendRowNumber(this)">返済済み</button>
+                <button type="button" class="btn btn-success btn-sm" th:if="${info.status}">返済済み</button>
                 <button type="button" class="btn btn-warning btn-sm" th:unless="${info.status}" onclick="sendRowNumber(this)">未返済</button>
             </form>
           </td>
@@ -50,7 +50,8 @@
     </table>
 
     <div id="total" style="font-size: 3.0em; text-align: right; margin-top: 100px;">
-      残り合計：50円 <!-- ここも動的に変更する必要があれば修正してください -->
+      <!-- 残り合計：50円 -->
+      残り合計：<span th:text="${repaymentAmtTotal} + '円'">50円</span>
     </div>
   </div>
 
